--- a/frontEnd/src/app/article-detail/article-detail.component.html
+++ b/frontEnd/src/app/article-detail/article-detail.component.html
@@ -29,8 +29,8 @@
     <div class="col-md-3 col-sm-3 col-xs-12 related-articles">
       <p><b>Related Stories</b></p>
       <div *ngIf="relatedArticleList">
-        <div class="row related-article-row" *ngFor="let relatedArticle of relatedArticleList | slice:0:4; let i = index" [hidden]="relatedArticleList[i].idArticle == article.idArticle"
-          style="margin-bottom: 20px" [routerLink]="[ '/news/', categoryName, relatedArticle.idArticle]">
+        <div class="row related-article-row" *ngFor="let relatedArticle of relatedArticleList | slice:0:4; let i = index" [hidden]="relatedArticleList[i]._id == article._id"
+          style="margin-bottom: 20px" [routerLink]="[ '/news/', categoryName, relatedArticle._id]">
           <div class="col-md-4 col-sm-12">
             <img [src]="relatedArticle.header_image" alt="img" style="width: 80px; height: 80px">
           </div>
