--- a/frontEnd/src/app/articles-list/articles-list.component.html
+++ b/frontEnd/src/app/articles-list/articles-list.component.html
@@ -1,25 +1,24 @@
 <div class="articles-list-container">
-  <button pButton type="button" (click)="toggle()" 
-          style="margin-bottom:10px" label="Desktop" 
+  <button pButton type="button" (click)="toggle()"
+          style="margin-bottom:10px" label="Desktop"
           icon="fa-desktop"
           *ngIf="!stacked">
   </button>
-  <button pButton type="button" (click)="toggle()" 
-          style="margin-bottom:10px" label="Mobile" 
+  <button pButton type="button" (click)="toggle()"
+          style="margin-bottom:10px" label="Mobile"
           icon="fa-mobile" *ngIf="stacked">
   </button>
   <input #gb type="text" placeholder="Global search" pInputText style="margin-bottom:10px">
   <button [routerLink]="['new']" class="btn-add-big-size" type="button" pButton icon="fa-plus" style="float:right" label="Add">
   </button>
-  <p-dataTable  [value]="articlesList" 
-              [rows]="4" 
-              [paginator]="true" 
-              [pageLinks]="3" 
-              [responsive]="true" 
+  <p-dataTable  [value]="articlesList"
+              [rows]="4"
+              [paginator]="true"
+              [pageLinks]="3"
+              [responsive]="true"
               [stacked]="stacked"
               [globalFilter]="gb"
-              selectionMode="single" [(selection)]="selectedArticle" (onRowSelect)="onRowSelect($event)">
-    <header>Articles List</header>
+              selectionMode="single" [(selection)]="selectedArticle" [contextMenu]="cm">
     <p-column field="title" header="Title" [sortable]="true"></p-column>
     <p-column field="date" header="Date" [sortable]="true">
       <template let-article="rowData" let-i="rowIndex" pTemplate="body">
@@ -29,10 +28,10 @@
     <p-column field="author" header="Author" [sortable]="true"></p-column>
     <p-column field="source" header="Source" [sortable]="true"></p-column>
     <footer>
-        <div class="ui-helper-clearfix" style="width:100%">
-                <button type="button" pButton icon="fa-plus" style="float:left" (click)="openDialog()" label="Add">
-                </button>
-        </div>
+      <div class="ui-helper-clearfix" style="width:100%">
+        <button [routerLink]="['new']" type="button" pButton icon="fa-plus" style="float:left" label="Add"></button>
+      </div>
     </footer>
   </p-dataTable>
+  <p-contextMenu #cm [model]="menuItems"></p-contextMenu>
 </div>
