--- a/frontEnd/src/app/articles-list/article-editor/article-editor.component.html
+++ b/frontEnd/src/app/articles-list/article-editor/article-editor.component.html
@@ -44,8 +44,8 @@
       </ckeditor>
     </md-card-content>
     <md-card-actions>
+      <button md-button color="primary" type="submit">{{ isCreate ? 'Create' : 'Update' }}</button>
       <button md-button type="button" (click)="onCancel()">Cancel</button>
-      <button md-button type="submit">Create</button>
     </md-card-actions>
   </md-card>
 </form>
