--- a/frontEnd/src/app/articles-list/article-editor/article-editor.component.html
+++ b/frontEnd/src/app/articles-list/article-editor/article-editor.component.html
@@ -18,26 +18,26 @@
         <input mdInput placeholder="Author (current user)" [(ngModel)]="articleDetail.author" id="author" name="author">
       </md-input-container>
 
-      <!-- <div class="row"> -->
-        <!-- <div class="col-md-8 col-sm-8"> -->
-          <!-- <md-input-container style="width: 100%">
-            <input mdInput id="imageUrl" required [(ngModel)]="articleDetail.header_image" name="header_image" placeholder="Image URL">
-          </md-input-container> -->
-
-          <!-- <div style="width: 100%; margin-top: 10px"> -->
       <md-select style="width: 100%; margin: 20px 0px;" placeholder="Category" [(ngModel)]="articleDetail.category" name="category">
         <md-option required *ngFor="let category of categories" [value]="category._id">
           {{category.name}}
         </md-option>
       </md-select>
-          <!-- </div> -->
-        <!-- </div> -->
 
-        <!-- <div class="col-md-4 col-sm-4">
-          <img id="image" name="headerImage" style="width: 100%; height: 100%;" [src]="articleDetail.header_image == null || articleDetail.header_image == '' ? 'http://www.doitacaav.vn/bitrix/components/vportal/news.list/templates/tinmoinhat/images/no_images.png' : articleDetail.header_image"
-          />
-        </div> -->
-      <!-- </div> -->
+      <div class="row">
+        <div class="col-md-6">
+          <div class="file-upload">
+              <input id="custom-input" type="file" (change)="fileChangeListener($event)">
+          </div>
+          <img-cropper #cropper [image]="articleDetail" [settings]="cropperSettings" (onCrop)="cropped($event, articleDetail)"></img-cropper>
+        </div>
+        <div class="col-md-6">
+          <button md-button type="button" (click)="onApplyCrop(articleDetail)">Apply crop</button>
+          <span class="result rounded" *ngIf="articleDetail.image" >
+              <img [src]="articleDetail.image" class="img-responsive">
+          </span>
+        </div>
+      </div>
 
       <ckeditor required name="content" [(ngModel)]="articleDetail.content" [config]="{extraPlugins: 'divarea'}"
         debounce="500">
