--- a/frontEnd/src/app/articles-list/article-editor/article-editor.component.scss
+++ b/frontEnd/src/app/articles-list/article-editor/article-editor.component.scss
@@ -1,3 +1,14 @@
 .new-article-form {
     margin: 30px;
 }
+
+.file-upload {
+  height: 36px;
+}
+
+md-spinner {
+  float: right;
+  width: 24px;
+  height: 24px;
+  margin: 5px 10px 0px 0px;
+}
