--- a/frontEnd/src/app/article-detail/article-detail.component.html
+++ b/frontEnd/src/app/article-detail/article-detail.component.html
@@ -58,57 +58,10 @@
       <h4>Comments</h4>
       <div class="line"></div>
     </div>
-    <!-- User comment box -->
-    <div class="col-md-7 col-sm-7 col-md-offset-2 col-sm-offset-2" *ngIf="authService.authenticated()">
-      <md-list>
-        <md-list-item>
-          <img md-list-avatar src="https://cdn1.iconfinder.com/data/icons/user-pictures/100/male3-512.png" alt="user-avatar">
-          <md-input-container style=" width: 100%; padding-left: 16px;">
-            <textarea mdInput placeholder="Leave a comment as {{user.first_name}} {{user.last_name}}" maxlength="300" required #characterCountComment
-              rows="3" [(ngModel)]="commentContent"></textarea>
-            <md-hint align="end">{{characterCountComment.value.length}} / 300</md-hint>
-          </md-input-container>
-          <div style="margin-left: 3px;" [hidden]="submittingComment">
-            <button md-icon-button (click)="comment()">
-          <md-icon color="primary"> send </md-icon>
-            </button>
-          </div>
-          <!-- Comment submit spinner -->
-          <div id="circleG" *ngIf="submittingComment">
-            <div id="circleG_1" class="circleG"></div>
-            <div id="circleG_2" class="circleG"></div>
-            <div id="circleG_3" class="circleG"></div>
-          </div>
-        </md-list-item>
-      </md-list>
-    </div>
-    <!-- End of user comment box -->
+    
     <div class="col-md-7 col-sm-7 col-md-offset-2 col-sm-offset-2" *ngIf="commentList">
       <!-- List of comment -->
-      <md-list>
-        <div *ngFor="let comment of commentList">
-          <md-list-item>
-            <img md-list-avatar src="https://cdn1.iconfinder.com/data/icons/user-pictures/100/male3-512.png" alt="user-avatar">
-            <h2 md-line> {{comment.first_name + ' ' + comment.last_name}} </h2>
-            <p md-line>
-              {{getCommentPeriod(comment.time)}}
-                <span class="pull-right" *ngIf="authService.authenticated() && authService.userProfile">
-                  <button md-icon-button [md-menu-trigger-for]="menu" *ngIf="comment._id == user._id || authService.userProfile.role == 1" >
-                    <md-icon>more_vert</md-icon>
-                  </button>
-                </span>
-            </p>
-          </md-list-item>
-          <md-menu #menu="mdMenu">
-            <button md-menu-item *ngIf="comment._id == user._id" (click)="modifyComment($event, comment); closeCommentMenu()"> Modify... </button>
-            <button md-menu-item (click)="removeComment($event, comment); closeCommentMenu()"> Remove... </button>
-          </md-menu>
-          <div class="comment-content">
-            <p>{{comment.content}}</p>
-          </div>
-          <hr class="comment-divider">
-        </div>
-      </md-list>
+      <app-comment [comments]="commentList"></app-comment>
     </div>
   </div>
 </div>
