--- a/frontEnd/src/app/article-detail/comment/comment.component.html
+++ b/frontEnd/src/app/article-detail/comment/comment.component.html
@@ -1,3 +1,5 @@
+<h4>Comments</h4>
+<div class="line"></div>
 <!-- User comment box -->
 <div *ngIf="authService.authenticated()">
   <form (ngSubmit)="onSubmit(commentForm.value)" #commentForm="ngForm">
@@ -6,7 +8,8 @@
         <img md-list-avatar src="https://cdn1.iconfinder.com/data/icons/user-pictures/100/male3-512.png" alt="user-avatar">
         <input type="hidden" name="user_id" 
               [value]="authService.userProfile.identities[0].user_id"
-              [(ngModel)]="comment.user_id">
+              [(ngModel)]="comment.user_id"
+              #userId>
         <md-input-container style=" width: 100%; padding-left: 16px;">
           <textarea mdInput placeholder="Leave a comment as {{authService.userProfile.name}}" 
                     maxlength="300" 
@@ -36,23 +39,23 @@
 </div>
 <!-- End of user comment box -->
 <md-list *ngIf="comments">
-  <div *ngFor="let comment of comments">
+  <div *ngFor="let comment of comments.reverse()">
     <md-list-item>
       <img md-list-avatar src="https://cdn1.iconfinder.com/data/icons/user-pictures/100/male3-512.png" alt="user-avatar">
       <h2 md-line> {{comment.user}} </h2>
       <p md-line>
-        <!-- {{getCommentPeriod(comment.time)}}
+         <!--{{getCommentPeriod(comment.time)}}-->
           <span class="pull-right" *ngIf="authService.authenticated() && authService.userProfile">
-            <button md-icon-button [md-menu-trigger-for]="menu" *ngIf="comment._id == user._id || authService.userProfile.role == 1" >
+            <button md-icon-button [md-menu-trigger-for]="menu" *ngIf="comment.user_id == authService.userProfile.identities[0].user_id || authService.userProfile.role == 1" >
               <md-icon>more_vert</md-icon>
             </button>
-          </span> -->
+          </span> 
       </p>
     </md-list-item>
-    <!-- <md-menu #menu="mdMenu">
-      <button md-menu-item *ngIf="comment._id == user._id" (click)="modifyComment($event, comment); closeCommentMenu()"> Modify... </button>
-      <button md-menu-item (click)="removeComment($event, comment); closeCommentMenu()"> Remove... </button>
-    </md-menu> -->
+    <md-menu #menu="mdMenu">
+      <button md-menu-item *ngIf="comment.user_id == authService.userProfile.identities[0].user_id" (click)="modifyComment($event, comment); closeCommentMenu()"> Modify... </button>
+      <button md-menu-item (click)="onOpenConfirmDialog(comment.user_id); closeCommentMenu()"> Remove... </button>
+    </md-menu> 
     <div class="comment-content">
       <p>{{comment.text}}</p>
     </div>
