--- a/frontEnd/src/app/confirm-dialog/confirm-dialog.component.html
+++ b/frontEnd/src/app/confirm-dialog/confirm-dialog.component.html
@@ -1,6 +1,6 @@
 <h1 md-dialog-title>Warning</h1>
 <md-dialog-content>
-  Are you sure to delete this article?
+  Are you sure to delete this one?
 </md-dialog-content>
 <md-dialog-actions class="pull-right">
   <button md-button color="primary" (click)="dialogRef.close('Yes')">Yes</button>
