--- a/frontEnd/src/app/article-detail/comment/comment.component.html
+++ b/frontEnd/src/app/article-detail/comment/comment.component.html
@@ -42,19 +42,19 @@
   <div *ngFor="let comment of comments.reverse()">
     <md-list-item>
       <img md-list-avatar src="https://cdn1.iconfinder.com/data/icons/user-pictures/100/male3-512.png" alt="user-avatar">
-      <h2 md-line> {{comment.user}} </h2>
+      <h2 md-line> {{authService.userProfile.nickname}} </h2>
       <p md-line>
-         <!--{{getCommentPeriod(comment.time)}}-->
-          <span class="pull-right" *ngIf="authService.authenticated() && authService.userProfile">
-            <button md-icon-button [md-menu-trigger-for]="menu" *ngIf="comment.user_id == authService.userProfile.identities[0].user_id || authService.userProfile.role == 1" >
-              <md-icon>more_vert</md-icon>
-            </button>
-          </span> 
+         {{getCommentPeriod(comment.date)}}
       </p>
+      <span class="pull-right">
+        <button md-icon-button [md-menu-trigger-for]="menu" *ngIf="comment.user_id == authService.userProfile.identities[0].user_id || authService.userProfile.role == 1" >
+          <md-icon>more_vert</md-icon>
+        </button>
+      </span> 
     </md-list-item>
     <md-menu #menu="mdMenu">
-      <button md-menu-item *ngIf="comment.user_id == authService.userProfile.identities[0].user_id" (click)="modifyComment($event, comment); closeCommentMenu()"> Modify... </button>
-      <button md-menu-item (click)="onOpenConfirmDialog(comment.user_id); closeCommentMenu()"> Remove... </button>
+      <button md-menu-item *ngIf="comment.user_id == authService.userProfile.identities[0].user_id" (click)="onModify($event, comment)"> Modify... </button>
+      <button md-menu-item (click)="onOpenConfirmDialog(comment._id)"> Remove... </button>
     </md-menu> 
     <div class="comment-content">
       <p>{{comment.text}}</p>
