--- a/frontEnd/src/app/article/article.component.html
+++ b/frontEnd/src/app/article/article.component.html
@@ -1,4 +1,4 @@
-<app-slide-2></app-slide-2>
+<app-swiper></app-swiper>
 <div class="container articles-container" *ngIf="publishedArticles && publishedArticles.length > 0">
   <div class="row">
     <div class="heading-line col-md-12 col-sm-12">
