--- a/frontEnd/src/app/articles-list/articles-list.component.scss
+++ b/frontEnd/src/app/articles-list/articles-list.component.scss
@@ -1,4 +1,5 @@
-@import '~@angular/material/core/theming/prebuilt/deeppurple-amber';
+@import '~@angular/material/theming';
+@import 'src/theming.scss';
 @include mat-core(); // include all mixins
 .articles-list-container {
   margin: 40px;
