--- a/frontEnd/src/app/admin/admin.component.html
+++ b/frontEnd/src/app/admin/admin.component.html
@@ -4,12 +4,12 @@
     <md-icon class="md-24" *ngIf="start.opened">arrow_back</md-icon>
   </button>
   <span class="remaining-space"></span>
-  <span [routerLink]="['/news/all']" class="header-title"> Frog Coffee News </span>
+  <span [routerLink]="['/news/all']" class="header-title"> Mercury </span>
 </md-toolbar>
 <md-sidenav-container height="100%" style="top: 48px;" class="admin-container">
   <md-sidenav mode="side" opened="true" #start class="admin-sidenav">
     <!--<md-toolbar color="primary">
-      <span [routerLink]="['/news/all']" id="header-title"> Frog Coffee News </span>
+      <span [routerLink]="['/news/all']" id="header-title"> Mercury </span>
       <span class="remaining-space"></span>
     </md-toolbar>-->
 
