--- a/frontEnd/src/app/admin/admin.component.scss
+++ b/frontEnd/src/app/admin/admin.component.scss
@@ -1,4 +1,6 @@
-@import '~@angular/material/core/theming/prebuilt/deeppurple-amber';
+@import '~@angular/material/theming';
+@import 'src/theming.scss';
+
 @include mat-core(); // include all mixins
 
 html, body, material-app, md-sidenav-container, .admin-content {
@@ -16,7 +18,6 @@ html, body, material-app, md-sidenav-container, .admin-content {
         width: 50px;
         height: 50px;
       }
-      // background-color: mat-color($primary);
     }
   
     md-nav-list {
