--- a/frontEnd/src/app/article-detail/article-detail.component.html
+++ b/frontEnd/src/app/article-detail/article-detail.component.html
@@ -1,32 +1,41 @@
 <div *ngIf="article" class="article-detail">
-  <header [ngStyle]="{'background-image': 'linear-gradient(rgba(0, 0, 0, 0.51), rgba(0, 0, 0, 0.85)), url(' + article.header_image + ')'}">
-    <div class="row" style="position: relative">
-      <div class="col-md-10">
-        <div class="content">
-          <h1>{{article.title}}</h1>
-          <h3 class="description">{{article.description}}</h3>
+  <header [ngStyle]="{'background-image': 'linear-gradient(to bottom, rgba(0, 0, 0, 0.0), #000000), url(' + article.header_image + ')'}">
+    <div class="row">
+      <div class="col-md-8 col-sm-10 col-md-offset-2 col-sm-offset-1 col-xs-12">
+        <div class="row is-flex">
+          <div class="col-md-8 col-sm-12 col-xs-12">
+            <div class="content">
+              <h1 class="title">{{article.title}}</h1>
+              <!--<h3 class="description">{{article.description}}</h3>-->
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-12 col-xs-12">
+            <div class="actions">
+              <a md-fab routerLink="." color="primary"><md-icon>comment</md-icon></a>
+              <a md-fab routerLink="." color="primary"><md-icon>bookmark</md-icon></a>
+              <a md-fab routerLink="." color="primary"><md-icon>share</md-icon></a>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="author">
-        <p>by <b>{{article.author}}</b></p>
       </div>
     </div>
   </header>
   <div class="row article-content-row">
-    <div class="col-md-2 col-sm-2 col-xs-12">
-      <p><b>Publish by:</b></p>
-      <div>
-        <figure>
-          <img src="https://byuc.files.wordpress.com/2012/07/avat-2.jpg" alt="#" style="height: 80px; width: 80px; border-radius: 50%">
-        </figure>
-        <h6>{{article.author}}</h6>
-        <h6>{{article.date | date:'medium'}}</h6>
+    <div class="col-md-8 col-sm-10 col-md-offset-2 col-sm-offset-1 col-xs-12 article-body">
+      <div class="body-info-container">
+        <!--<div><md-icon>clock</md-icon>CNN</div>-->
+        <div class="info">
+          <md-icon>volume_up</md-icon>{{article.source || 'MERCURY'}}</div>
+        <div class="info">
+          <md-icon>access_time</md-icon>{{article.date | date:'medium'}}</div>
+        <div class="info">
+          <md-icon>people</md-icon>{{article.author || "N/A"}}</div>
+        <span class="remaining-space"></span>
+        <p class="info-category">{{categoryName}}</p>
       </div>
-    </div>
-    <div class="col-md-7 col-sm-7 col-xs-12 article-body">
       <div [innerHTML]="article.content" class="text-body"></div>
     </div>
-    <div class="col-md-3 col-sm-3 col-xs-12 related-articles">
+    <!--<div class="col-md-3 col-sm-3 col-xs-12 related-articles">
       <p><b>Related Stories</b></p>
       <div *ngIf="relatedArticleList">
         <div class="row related-article-row" *ngFor="let relatedArticle of relatedArticleList | slice:0:4; let i = index" [hidden]="relatedArticleList[i]._id == article._id"
@@ -36,26 +45,10 @@
           </div>
           <div class="col-md-8 col-sm-12">
             <p>{{relatedArticle.title}}</p>
-            <!--<p>{{relatedArticle.date}}</p>-->
           </div>
         </div>
       </div>
-    </div>
+    </div>-->
   </div>
-  <div class="row">
-    <div class="comment-line col-md-7 col-sm-7 col-md-offset-2 col-sm-offset-2">
-      <h4>Share to your friends</h4>
-      <div class="line"></div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-7 col-sm-7 col-md-offset-2 col-sm-offset-2">
-      <share-buttons [pinterest]="false"></share-buttons>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-7 col-sm-7 col-md-offset-2 col-sm-offset-2" *ngIf="commentList">
-      <app-comment [comments]="commentList"></app-comment>
-    </div>
-  </div>
+  <app-comment [comments]="commentList"></app-comment>
 </div>
