--- a/frontEnd/src/app/article-detail/article-detail.component.scss
+++ b/frontEnd/src/app/article-detail/article-detail.component.scss
@@ -1,4 +1,5 @@
-@import '~@angular/material/core/theming/prebuilt/deeppurple-amber';
+@import '~@angular/material/theming';
+@import 'src/theming.scss';
 @include mat-core(); // include all mixins
 .article-detail {
   header {
@@ -8,14 +9,38 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    align-items: center;
+    .row.is-flex {
+      padding-bottom: 50px;
+      display: flex;
+      flex-wrap: wrap;
+    }
+    .row.is-flex>[class*='col-'] {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      align-items: flex-end;
+    }
     .content {
-      padding: 30px;
       margin: 0;
-      color: white;
+      .title {
+        font-size: 46px;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: bold;
+        line-height: 1.22;
+        color: #ffffff;
+        margin: 0;
+      }
       .description {
-        color: #cecece;
-        line-height: 1.5;
+        font-size: 30px;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 500;
+        line-height: 1.22;
+        color: #ffffff;
+      }
+    }
+    .actions {
+      a {
+        margin-right: 10px;
       }
     }
   }
@@ -29,11 +54,39 @@
   }
   .article-content-row {
     margin: auto;
-    margin-top: 80px;
+    margin-top: 50px;
     .article-body {
-      // display: table;
       overflow: hidden;
+      .body-info-container {
+        font-family: 'Montserrat';
+        font-size: 10px;
+        color: #000000;
+        display: flex;
+        flex-direction: row;
+        margin-bottom: 50px;
+        .info {
+          margin-right: 25px;
+          md-icon {
+            vertical-align: middle;
+            opacity: 0.3;
+            margin-right: 10px;
+            height: 100%;
+          }
+        }
+        .info-category {
+          text-transform: uppercase;
+          border-bottom: 1px solid #cecece;
+          display: flex;
+          align-items: center;
+        }
+        .remaining-space {
+          flex: 1 1 auto;
+        }
+      }
       .text-body {
+        font-size: 15px;
+        line-height: 2.0;
+        color: #1d1d26;
         img {
           width: 100% !important;
         }
@@ -69,5 +122,15 @@
         bottom: 10px;
       }
     }
+  }
+}
+
+@media screen and (max-width: 990px) {
+  .row.is-flex>[class*='col-'] {
+    justify-content: flex-end !important;
+    align-items: flex-start !important;
+  }
+  .actions {
+    margin-top: 20px;
   }
 }
